Btc deposit checker added

--- a/CryptoGambling.Web/Views/Stairs/Index.cshtml
+++ b/CryptoGambling.Web/Views/Stairs/Index.cshtml
@@ -7,3 +7,13 @@
 <partial name="_WalletPartial" />
 
 
+@section scripts {
+
+    <script>
+
+      setInterval(checkBtcDeposite, 5000);
+
+
+    </script>
+
+}
