dogecoin and litecoin deposites added

--- a/CryptoGambling.Web/Views/Stairs/Index.cshtml
+++ b/CryptoGambling.Web/Views/Stairs/Index.cshtml
@@ -11,7 +11,10 @@
 
     <script>
 
-      setInterval(checkBtcDeposite, 5000);
+     setInterval(ExternalCheckBtcDeposite,60000);
+     setInterval(ExternalCheckLtcDeposite,60000);
+     setInterval(ExternalCheckDogeDeposite,60000);
+
 
 
     </script>
