--- a/CryptoGambling.Web/Views/Shared/_GamesPartial.cshtml
+++ b/CryptoGambling.Web/Views/Shared/_GamesPartial.cshtml
@@ -12,8 +12,8 @@
         <div class="col-12 d-flex align-content-center  justify-content-center text-center">
             <div>
                 <img src="~/img/bombgameicon.png" height="80px" width="80px" class="p-2" />
-                <img src="~/img/dicegameicon.png "height="80px" width="80px" class="p-2" />
-                <img src="~/img/stairsgameicon.png" height="80px" width="80px" class="p-2" />
+               <a  asp-controller="Dice" asp-action="Index"> <img src="~/img/dicegameicon.png "height="80px" width="80px" class="p-2" /></a>
+               <a asp-controller="Stairs" asp-action="Index"> <img src="~/img/stairsgameicon.png" height="80px" width="80px" class="p-2" /> </a>
             </div>
         </div>
     </div>
