--- a/CryptoGambling.Web/Views/Shared/_WalletPartial.cshtml
+++ b/CryptoGambling.Web/Views/Shared/_WalletPartial.cshtml
@@ -5,7 +5,7 @@
 <div class="container d-flex align-content-center justify-content-center pb-5">
     <div class="d-inline">
         <div class="dropdown p-1">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-secondary dropdown-toggle al" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="~/img/btcwalleticon.png" id="walletImg" class="d-inline" height=22px; width=22px; />
                 <span id="walletBalance" class="pe-5">@Model.BtcBalance</span>
                 <span id="walletShortName" class="walletShortName ms-5 p-1">BTC</span>
